secondfile/objects/RDS_Premise_Details__c.object
<CustomObject>
    <fields>
        <fullName>ACNA__c</fullName>
        <description>DealHash-RDS-Premise Details-ACNA</description>
        <label>ACNA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGAUTH_Dated__c</fullName>
        <description>Premise Details-Access Details-AGAUTH Dated</description>
        <label>AGAUTH Dated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGAUTH__c</fullName>
        <description>Premise Details-Access Details-AGAUTH</description>
        <label>AGAUTH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALOC_USOC__c</fullName>
        <description>Premise Details-Order Related Data-USOCS-
ALOC USOC</description>
        <label>ALOC USOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Call_Status__c</fullName>
        <label>ASR Call Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Message__c</fullName>
        <label>ASR Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Status_Date__c</fullName>
        <label>ASR Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Access_Circuit_ID__c</fullName>
        <label>Access Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Provider_Project_Number__c</fullName>
        <label>Access Provider Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Region__c</fullName>
        <description>Premise Details-Access Region</description>
        <label>Access Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CAM__c</fullName>
        <formula>DealHash__r.Opportunity__r.Account.Owner.FirstName &amp;&quot; &quot;&amp; DealHash__r.Opportunity__r.Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>DealHash__r.Opportunity__r.Account.Id18Digit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Concatenated__c</fullName>
        <formula>IF(ISNULL( Premise_Street_Number__c   ),&apos;&apos;,Premise_Street_Number__c + &apos; &apos; ) 
 + IF(ISNULL( Premise_Street_Direction__c   ),&apos;&apos;,Premise_Street_Direction__c  + &apos; &apos;)  
 + IF(ISNULL( Premise_Street_Name__c  ),&apos;&apos;,Premise_Street_Name__c + &apos; &apos;)  
  + IF(ISNULL( Premise_Street_Type__c  ),&apos;&apos;,Premise_Street_Type__c  + &apos; &apos;) 
+ IF(ISNULL(Premise_City__c),&apos;&apos;,Premise_City__c + &apos; &apos;) 
+ IF(ISNULL( Premise_State__c ),&apos;&apos;,Premise_State__c + &apos; &apos;) 
 + IF(ISNULL( Premise_Zipcode__c  ),&apos;&apos;,Premise_Zipcode__c )</formula>
        <label>Address Concatenated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Billing_Indicator__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Aggregate Billing Option-Aggregate Billing Indicator</description>
        <label>Aggregate Billing Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Product_Package_Code__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Aggregate Billing Option-Aggregate Product Package Code</description>
        <label>Aggregate Product Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Recurring_Charge_Discount__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Aggregate Billing Option-Aggregate Recurring Charge Discount</description>
        <label>Aggregate Recurring Charge Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Usage_Discount__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Aggregate Billing Option-Aggregate UsageDiscount</description>
        <label>Aggregate Usage Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregation_Indicator__c</fullName>
        <description>Premise Details-Access Details-Aggregation Indicator</description>
        <label>Aggregation Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asetopology__c</fullName>
        <label>Asetopology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Port_Speed_Bandwidth__c</fullName>
        <formula>(VALUE(Port_Speed__c) - (Combined_VLAN_Speed__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Port Speed Bandwidth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAN__c</fullName>
        <description>DealHash-RDS-Premise Details-BAN</description>
        <label>BAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Available_Due_Date__c</fullName>
        <description>Premise Details-Order Related Data-Best Available Due Date</description>
        <label>Best Available Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Burstable_Billing_Indicator__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Burstable Billing Option-Burstable Billing Indicator</description>
        <label>Burstable Billing Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burstable_Product_Package_Code__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Burstable Billing Option-Burstable Product Package Code</description>
        <label>Burstable Product Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burstable_Recurring_Charge_Discount__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Burstable Billing Option-Burstable Recurring Charge Discount</description>
        <label>Burstable Recurring Charge Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burstable_Usage_Discount__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-Burstable Billing Option-Burstable Usage Discount</description>
        <label>Burstable Usage Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_email__c</fullName>
        <label>CAM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CNR_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is for enabling disconnect option for Premise with Status as Pending .</description>
        <label>CNR Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNR_Due_Date__c</fullName>
        <label>CNR Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Quote Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>RDS-Premise Details</relationshipLabel>
        <relationshipName>RDS_Premise_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Flow_Type__c</fullName>
        <label>Change Flow Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AddSite</fullName>
                </value>
                <value>
                    <fullName>CancelInFlight</fullName>
                </value>
                <value>
                    <fullName>SoftDisconnect</fullName>
                </value>
                <value>
                    <fullName>SoftDisconnectCancel</fullName>
                </value>
                <value>
                    <fullName>TotalDisconnect</fullName>
                </value>
                <value>
                    <fullName>SpChPL</fullName>
                </value>
                <value>
                    <fullName>SpChEth</fullName>
                </value>
                <value>
                    <fullName>SpChEth~IC</fullName>
                </value>
                <value>
                    <fullName>COS</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circuit_Access_Type_Internal__c</fullName>
        <formula>if( Transport_Type__c =&quot;SwitchedEthernet&quot; ,&quot;S&quot;, 
 if(Transport_Type__c =&quot;DedicatedEthernet&quot;,&quot;E&quot;,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Circuit Access Type_Internal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Access_Type__c</fullName>
        <label>Circuit Access Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Circuit_Action__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>Circuit Circuit Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Order_Action__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>Circuit Order Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_ServiceSub_Type_Internal__c</fullName>
        <formula>If( (Transport_Type__c =&apos;SwitchedEthernet&apos; || Transport_Type__c =&apos;DedicatedEthernet&apos;), &apos;PL&apos;,&apos;&apos;)</formula>
        <label>Circuit ServiceSub Type_Internal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_ServiceSub_Type__c</fullName>
        <label>Circuit ServiceSub Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Service_Code_Modifier__c</fullName>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>Circuit Service Code Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Service_Code__c</fullName>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>Circuit Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Service_Type_Internal__c</fullName>
        <formula>If( (Transport_Type__c =&apos;SwitchedEthernet&apos; || Transport_Type__c =&apos;DedicatedEthernet&apos;), Service_Type__c,&apos;&apos;)</formula>
        <label>Circuit Service Type_Internal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Service_Type__c</fullName>
        <label>Circuit Service Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Speed__c</fullName>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>Circuit Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_VLAN_Indicator__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>US321961 : Needed for Circuit ID/USO API call</description>
        <label>Circuit VLAN Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_mlppIndicator__c</fullName>
        <label>Circuit mlppIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_mlppSegments__c</fullName>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>Circuit mlppSegments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Of_Service_USOC__c</fullName>
        <description>Premise Details-Order Related Data-USOCS-
Class Of Service USOC</description>
        <label>Class Of Service USOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combined_VLAN_Speed__c</fullName>
        <label>Combined VLAN Speed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitive_Access_Discount_Indicator__c</fullName>
        <description>Premise Details-Competitive Access Discount Indicator</description>
        <label>Competitive Access Discount Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Discount_Effective_Date__c</fullName>
        <description>DealHash-RDS-Premise Details-Competitive Discount Effective Date</description>
        <label>Competitive Discount Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_Site_Address__c</fullName>
        <formula>Premise_Street_Number__c &amp; &quot;, &quot; &amp; Premise_Street_Name__c &amp; &quot;, &quot; &amp; Premise_City__c &amp; &quot;, &quot; &amp; Premise_State__c &amp; &quot;, &quot; &amp; Premise_Zipcode__c</formula>
        <label>Complete Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Line_1__c</fullName>
        <label>Contact Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Line_2__c</fullName>
        <label>Contact Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Attention__c</fullName>
        <label>Contact Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Middle_Name__c</fullName>
        <label>Contact Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <label>Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Strata__c</fullName>
        <label>Contact Strata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zipcode_Extension__c</fullName>
        <label>Contact Zipcode Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zipcode_GeoCode__c</fullName>
        <label>Contact Zipcode GeoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zipcode__c</fullName>
        <label>Contact Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_Type__c</fullName>
        <formula>&apos;EBM&apos; &amp; Service_Type__c &amp;  Contract_Number_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_Value__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Contract Number Value</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Critical_Related_Order__c</fullName>
        <description>Premise Details-Order Related Data-Critical Related Order</description>
        <label>Critically Related Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentDateTime__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to indicate the latest version of Premise under consideration.</description>
        <label>Current Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_ATI__c</fullName>
        <description>Premise Details-Access Details-Customer ATI</description>
        <label>Customer ATI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Directed_Testing_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Customer Directed Testing Indicator</description>
        <label>Customer Directed Testing Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LEC_Circuit_ID__c</fullName>
        <description>Premise Details-Access Details-Customer LEC Circuit ID</description>
        <label>Customer LEC Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_NCI__c</fullName>
        <description>Premise Details-Access Details-Customer NCI</description>
        <label>Customer NCI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PON__c</fullName>
        <description>Premise Details-Access Details-Customer PON</description>
        <label>Customer PON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Number_Copied_Value__c</fullName>
        <label>Customer Project Number Copied Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Number__c</fullName>
        <description>Premise Details-Access Details-Customer Project Number</description>
        <label>Customer Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Decision_Copied_Value__c</fullName>
        <label>Customer Purchase Decision Copied Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Decision_Date__c</fullName>
        <description>Premise Details-Order Related Data-Customer Purchase Decision Date</description>
        <label>Customer Purchase Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_SEC_NCI__c</fullName>
        <description>Premise Details-Access Details-Customer SEC NCI</description>
        <label>Customer SEC NCI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_Code__c</fullName>
        <description>Premise Details-Order Related Data-Cut Code</description>
        <label>Cut Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVA_Date__c</fullName>
        <description>Premise Details-Order Related Data-DVA Date</description>
        <label>DVA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealHash__c</fullName>
        <description>For Relating Premise with Parent Deal Hash Record</description>
        <label>Deal Hash</label>
        <referenceTo>Deal_Hash__c</referenceTo>
        <relationshipLabel>RDS-Premise Details</relationshipLabel>
        <relationshipName>Premise</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deal_Hash_Premise_Notify_Count__c</fullName>
        <formula>DealHash__r.Premise_Notification_Update_Failed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Hash Premise Notify Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Hash_name__c</fullName>
        <formula>DealHash__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Hash name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Name__c</fullName>
        <formula>DealHash__r.Opportunity__r.BID_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type_CPE__c</fullName>
        <label>Device Type (CPE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disconnect_Type__c</fullName>
        <label>Disconnect Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Site_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Disconnect</fullName>
                </value>
                <value>
                    <fullName>Hard Disconnect</fullName>
                </value>
                <value>
                    <fullName>Soft Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Premise Details-Effective Date</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <formula>DealHash__r.Opportunity__r.End_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Control_Office__c</fullName>
        <description>Premise Details-Control Office Details-
Engineering Control Office</description>
        <label>Engineering Control Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Auth_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premise Details-Order Related Data-Expedite Auth Indicator</description>
        <label>Expedite Auth Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FUSF__c</fullName>
        <description>DealHash-RDS-Premise Details-FUSF</description>
        <label>FUSF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_MACD__c</fullName>
        <description>created to display on macd change page.</description>
        <formula>if(Premise_Street_Number__c!=&quot;&quot;, Premise_Street_Number__c,&quot;&quot;) &amp;
if(Premise_Street_Direction__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_Street_Direction__c,&quot;&quot;) &amp;
if(Premise_Street_Name__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_Street_Name__c,&quot;&quot;) &amp;
if(Premise_Street_Type__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_Street_Type__c,&quot;&quot;) &amp;
if(Premise_City__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_City__c,&quot;&quot;) &amp;
if(Premise_State__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_State__c,&quot;&quot;) &amp;
if(Premise_Zipcode__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_Zipcode__c,&quot;&quot;)</formula>
        <label>Full Address MACD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Adress__c</fullName>
        <formula>if(Premise_Street_Number__c!=&quot;&quot;,Premise_Street_Number__c&amp;&quot; &quot;,&quot;&quot;) &amp; if(Premise_Street_Name__c!=&quot;&quot;,Premise_Street_Name__c,&quot;&quot;) &amp;
if(Premise_City__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_City__c,&quot;&quot;) &amp;
if(Premise_State__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_State__c,&quot;&quot;) &amp;
if(Premise_Zipcode__c!=&quot;&quot;, &quot;,&quot; &amp;Premise_Zipcode__c,&quot;&quot;)</formula>
        <label>Full Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Deal_Hash_Number__c</fullName>
        <formula>DealHash__r.GRID_Deal_Hash_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Deal Hash Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <label>GRID Premise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupPortID_Auto__c</fullName>
        <displayFormat>PLID00{0000000000}</displayFormat>
        <label>GroupPortID_Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Handoff_NTE__c</fullName>
        <label>Handoff (NTE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiCap_Flex_Product_Package_Code__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-HiCap Flex Billing Option-HiCap Flex Product Package Code</description>
        <label>HiCap Flex Product Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiCap_Flex_Recurring_Charge_Discount__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-HiCap Flex Billing Option-HiCap Flex Recurring Charge Discount</description>
        <label>HiCap Flex Recurring Charge Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiCap_Flex_Usage_Discount__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-HiCap Flex Billing Option-HiCap FlexUsage Discount</description>
        <label>HiCap Flex Usage Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDH_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IDH call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INSTAR_OrderNumber_Serial__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>INSTAR OrderNumber Serial</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IPFLEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPFLEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Type_Code__c</fullName>
        <defaultValue>&apos;PORT&apos;</defaultValue>
        <description>Premise Details-Network Inventory Details-Inventory Type Code</description>
        <label>Inventory Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsASRcall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendASRcall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAtom__c</fullName>
        <formula>DealHash__r.Opportunity__r.ATOM_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAtom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBIDMigrated__c</fullName>
        <description>This is a technical Field only to determine if its a BID deal or Migrated BID Deal</description>
        <formula>DealHash__r.Opportunity__r.isBIDMigrationCompleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>I am now Migrated from BID</inlineHelpText>
        <label>Is BID Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCircuit_ID_USO_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by CastIron to stamp success at Premise level.</description>
        <label>IsCircuit ID/USO Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deal_Hash_Call_Success__c</fullName>
        <formula>DealHash__r.IsDealHashCreationSuccess__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Deal Hash Call Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Save_Button_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Save Button Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jack_Code__c</fullName>
        <description>Premise Details-Access Details-Jack Code</description>
        <label>Jack Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_NBR__c</fullName>
        <description>Premise Details-Access Details-Jack NBR</description>
        <label>Jack NBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_POS__c</fullName>
        <description>Premise Details-Access Details-Tie Down Details-Jack POS</description>
        <label>Jack POS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Status__c</fullName>
        <defaultValue>&quot;D&quot;</defaultValue>
        <description>Premise Details-Access Details-Tie Down Details-Jack Status</description>
        <label>Jack Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATA__c</fullName>
        <description>DealHash-RDS-Premise details-LATA</description>
        <label>LATA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Labor Indicator</description>
        <label>Labor Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Premise Details-Latitude</description>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Notes__c</fullName>
        <description>Technical field, not to be added to page layouts.</description>
        <formula>LEN( Notes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Notes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_NTE__c</fullName>
        <label>Location (NTE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogOutFormula__c</fullName>
        <formula>Log_Out_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LogOutFormula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_In_Time__c</fullName>
        <label>Log In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Out_Time__c</fullName>
        <label>Log Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <label>Logged In User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Premise Details-Longitude</description>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Change_Category__c</fullName>
        <label>MACD Change Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vlan Level Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>